--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    
-  
-    <title>Meme Quiz App</title>
-  </head>
-  <body>
+    <meta name="description" content="Web site created using create-react-app" />
+    <style>
+        * {
+            font-family: 'Zen Antique', serif;
+            margin: 0;
+        }
+    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Antique&display=swap" rel="stylesheet">
+
+    <title>Meme Trivia </title>
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-   
-  </body>
+
+</body>
+
 </html>
